--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -8,6 +8,7 @@
 		"last-updated": "2016-11-30",
         "message-documentation": "qqq.json"
     },
+		"general_webui_title" : "Hyperion - Web Configuration",
 		"general_country_de" : "Germany",
 		"general_country_us" : "United States",
 		"general_country_uk" : "United Kingdom",
@@ -18,6 +19,7 @@
 		"general_speech_de" : "German",
 		"general_speech_en" : "English",
 		"general_access_default" : "Default",
+		"general_access_advanced" : "Advanced",
 		"general_access_expert" : "Expert",
 		"general_comp_SMOOTHING" : "Smoothing",
 		"general_comp_BLACKBORDER" : "Blackbar Detection",
@@ -36,7 +38,10 @@
 		"general_btn_continue" : "Continue",
 		"general_btn_save" : "Save",
 		"general_btn_saverestart" : "Save and restart",
+		"general_btn_saveandreload" : "Save and reload",
 		"general_btn_restarthyperion" : "Restart Hyperion",
+		"general_btn_off" : "Off",
+		"general_btn_on" : "On",
 		"dashboard_label_intro" : "The dashboard give you a quick overview about the status of Hyperion and show you the latest news of the Hyperion Blog.",
 		"dashboard_infobox_label_title" : "Information",
 		"dashboard_infobox_label_currenthyp" : "Your Hyperion version:",
@@ -67,15 +72,24 @@
 		"main_menu_input_selection_token" : "Input Selection",
 		"main_menu_logging_token" : "Log",
 		"main_menu_webconfig_token" : "Web configuration",
+		"main_ledsim_title" : "LED Visualization",
+		"main_ledsim_text" : "Live visualization of led colors and optional the current video stream of your capture device. (Warning: resource heavy)",
+		"main_ledsim_btn_toggleleds" : "Show LEDs",
+		"main_ledsim_btn_togglelednumber" : "LED numbers",
+		"main_ledsim_btn_togglelivevideo" : "Live video",
 		"conf_general_label_title" : "General settings",
 		"conf_general_label_intro" : "Basic settings around Hyperion and WebUI that don't fit into another category.",
+		"conf_general_impexp_title" : "Import/Export Configuration",
+		"conf_general_impexp_l1" : "Import a configuration by selecting a configuration file below and click on \"Import\".",
+		"conf_general_impexp_l2" : "Export a configuration by clicking on \"Export\". Your browser starts a download.",
+		"conf_general_impexp_impbtn" : "Import",
+		"conf_general_impexp_expbtn" : "Export",
 		"conf_helptable_option" : "Option",
 		"conf_helptable_expl" : "Explanation",
 		"conf_effects_label_intro" : "Setting up a booteffect/color that is visible after Hyperion startup. Configure a background effect/color which is active, when all capture sources are disabled (also temporarily via Kodi Watch)",
 		"conf_leds_label_intro" : "The LED controller of youre choice is your way to output the led data via Raspberry PI GPIO, USB or network! Choose one, define your led layout and enjoy the light!",
 		"conf_leds_nav_label_ledcontroller" : "LED Controller",
 		"conf_leds_nav_label_ledlayout" : "LED Layout",
-		"conf_leds_nav_label_ledtesting" : "LED Testing",
 		"conf_leds_contr_label_contrtype" : "Controller type:",
 		"conf_leds_optgroup_RPiSPI" : "RPi SPI",
 		"conf_leds_optgroup_RPiPWM" : "RPi PWM",
@@ -122,10 +136,6 @@
 		"conf_leds_layout_ma_optbottomright" : "Bottom right",
 		"conf_leds_layout_textf1" : "This textfield shows by default your current loaded layout and will be overwritten if you generate a new one with the options below. Optional you could perform further edits.",
 		"conf_leds_layout_textf2" : "Don't forget to save!",
-		"conf_leds_test_button_toggleleds" : "toggle leds",
-		"conf_leds_test_button_togglelednumber" : "toggle led numbers",
-		"conf_leds_test_button_toggleliveleds" : "toggle live leds",
-		"conf_leds_test_button_togglelivevideo" : "toggle live video",
 		"conf_grabber_label_intro" : "Hyperion supports two ways on how to get captured pictures for processing and output. The platform capture: internal at the device you are running Hyperion on (best qualitiy) and the USB Capture which gathers from a connected device the necessary pictures (more calibration work and configuration).",
 		"conf_colors_label_intro" : "Color calibration, smoothing (color transistions) and detection of blackbars.",
 		"conf_network_label_intro" : "All network based settings are listed here.",
@@ -142,6 +152,14 @@
 		"remote_effects_label_effects" : "Effect:",
 		"remote_input_label_sourceselection" : "Source Selection",
 		"remote_input_label_autoselect" : "Auto Selection",
+		"remote_input_setsource_btn" : "Select Input",
+		"remote_input_sourceactiv_btn" : "Input active",
+		"remote_input_origin" : "Origin",
+		"remote_input_owner" : "Type",
+		"remote_input_priority" : "Priority",
+		"remote_input_status" : "Status/Action",
+		"remote_input_duration" : "Duration:",
+		"remote_input_ip" : "IP:",
 		"remote_components_label_components" : "Components control",
 		"remote_optgroup_usreffets" : "User Effects",
 		"remote_optgroup_syseffets" : "Provided Effects",
@@ -162,10 +180,10 @@
 		"effectsconfigurator_label_chooseeff" : "Choose Base-Effect:",
 		"effectsconfigurator_button_saveeffect" : "Save Effect",
 		"effectsconfigurator_label_effectname" : "Effect name",
-		"effectsconfigurator_button_starttest" : "Start Effecttest",
-		"effectsconfigurator_button_stoptest" : "Stop Effecttest",
-		"effectsconfigurator_button_conttest" : "Toggle continuous testing",
-		"effectsconfigurator_label_deleffect" : "Delete Effect::",
+		"effectsconfigurator_button_starttest" : "Start test",
+		"effectsconfigurator_button_stoptest" : "Stop test",
+		"effectsconfigurator_button_conttest" : "Continuous test",
+		"effectsconfigurator_label_deleffect" : "Delete Effect:",
 		"effectsconfigurator_button_deleffect" : "Delete Effect",
 		"support_label_title" : "Support Hyperion",
 		"support_label_intro" : "Hyperion is a free non-profit software. A small team is working on it and this is why we need your steady support.",
@@ -195,32 +213,41 @@
 		"update_versreminder" : "Your version: $1",
 		"info_conlost_label_title" : "Lost connection to Hyperion service!",
 		"info_conlost_label_reason" : "Possible reasons:",
-		"info_conlost_label_reason1" : "- Hyperion restarts",
+		"info_conlost_label_reason1" : "- Bad WLAN connection",
 		"info_conlost_label_reason2" : "- You perform an update",
 		"info_conlost_label_reason3" : "- Hyperion isn't running",
 		"info_conlost_label_autorecon" : "We reconnect again after Hyperion is available.",
 		"info_conlost_label_autorefresh" : "This page will be automatically refreshed.",
 		"info_conlost_label_reload" : "If not, click me or reload the page",
+		"info_restart_title" : "Restarts currently...",
+		"info_restart_rightback" : "Hyperion will be right back immediately!",
+		"info_restart_contus" : "If you still hang around here after 20 seconds and you have no clue why please open a new topic at our support forum...",
+		"info_restart_contusa" : "...with your last steps. Thank you!",
+		"infoDialog_general_success_title" : "Success",
+		"infoDialog_general_error_title" : "Error",
+		"infoDialog_general_warning_title" : "Warning",
 		"infoDialog_leds_gap_title" : "GAP LOST IN SPACE!",
 		"infoDialog_leds_gap_text" : "Your gap length/position is higher than your LED count, lower the gap length or gap position!",
 		"InfoDialog_leds_validfail_title" : "JSON Validation failed!",
-		"infoDialog_effconf_deleted_title" : "Effect deleted!",
 		"infoDialog_effconf_deleted_text" : "The effect \"$1\" has been deleted successfully!",
-		"infoDialog_effconf_created_title" : "Effect created!",
 		"infoDialog_effconf_created_text" : "The effect \"$1\" has been created successfully!",
 		"infoDialog_effconf_invalidvalue_title" : "INVALID VALUE",
 		"infoDialog_effconf_invalidvalue_text" : "Please check for red marked input(s) and try again!",
 		"InfoDialog_lang_title" : "Language setting",
 		"InfoDialog_lang_text" : "If you don't like the result of the automatic language detection you could overwrite it here.",
-		"InfoDialog_access_title" : "Level setting",
-		"InfoDialog_access_text" : "Depending on settings level you could change more or less settings. Recommended is the default level.",
+		"InfoDialog_access_title" : "Settings level",
+		"InfoDialog_access_text" : "Depending on settings level you could adjust more options or get access to more features. Recommended is the \"Default\" level.",
 		"InfoDialog_nowrite_title" : "write permission error!",
 		"InfoDialog_nowrite_text" : "Hyperion can't write to your current loaded configuration file. Please repair the file permissions to proceed.",
 		"InfoDialog_nowrite_foottext" : "The WebUI will be unlocked automatically after you solved the problem!",
-		"infoDialog_wizrgb_title" : "Success",
 		"infoDialog_wizrgb_text" : "Your RGB Byte Order is already well adjusted.",
-		"infoDialog_writeconf_error_title" : "Error",
 		"infoDialog_writeconf_error_text" : "Saving your configuration failed.",
+		"infoDialog_import_jsonerror_text" : "The selected configuration file \"$1\" is no .json file or it's corrupted. Error message: ($2)",
+		"infoDialog_import_hyperror_text" : "The selected configuration file \"$1\" can't be imported. It's not compatible with Hyperion 2.0 and higher!",
+		"infoDialog_import_reverror_text" : "The revision of your configuration file \"$1\" doesnt match the current Hyperion version you run (File: $2, Hyperion: $3). You could just import matching configurations!",
+		"infoDialog_import_comperror_text" : "Sad! Your browser doesn't support a import. Please try again with another browser.",
+		"infoDialog_import_confirm_title" : "Confirm import",
+		"infoDialog_import_confirm_text" : "Are you sure to import \"$1\"? This process can't be reverted!",
 		"wiz_rgb_title" : "RGB Byte Order Wizard",
 		"wiz_rgb_intro1" : "This wizard will guide you through the finding process of the correct color order for your leds. Click on continue to begin.",
 		"wiz_rgb_intro2" : "When do you need this wizard? Example: You set the color red, but you get green or blue. You could also use it for first configuration.",
@@ -229,6 +256,9 @@
 		"wiz_rgb_q" : "Which color show your leds, when the color dot above shows...",
 		"wiz_rgb_qrend" : "...red?",
 		"wiz_rgb_qgend" : "...green?",
+		"edt_dev_enum_subtract_minimum" : "Substract minimum",
+		"edt_dev_enum_sub_min_warm_adjust" : "Min warm adjust",
+		"edt_dev_enum_white_off" : "White off",
 		"edt_dev_general_heading_title" : "General Settings",
 		"edt_dev_general_name_title" : "Configuration name",
 		"edt_dev_general_ledCount_title" : "Count of all hardware LEDs",
@@ -297,6 +327,13 @@
 		"edt_conf_enum_linear" : "Linear",
 		"edt_conf_enum_PAL" : "PAL",
 		"edt_conf_enum_NTSC" : "NTSC",
+		"edt_conf_enum_logsilent" : "Silent",
+		"edt_conf_enum_logwarn" : "Warning",
+		"edt_conf_enum_logverbose" : "Verbose",
+		"edt_conf_enum_logdebug" : "Debug",
+		"edt_conf_enum_bbdefault" : "Default",
+		"edt_conf_enum_bbclassic" : "Classic",
+		"edt_conf_enum_bbosd" : "OSD",
 		"edt_conf_gen_heading_title" : "General Settings",
 		"edt_conf_gen_name_title" : "Configuration name",
 		"edt_conf_gen_name_expl" : "A user defined name which is used to detect Hyperion. (Helpful with more than one Hyperion instance)",
@@ -304,24 +341,41 @@
 		"edt_conf_gen_showOptHelp_expl" : "Show all available explanations in each section. Highly recommended for beginners!",
 		"edt_conf_color_heading_title" : "Color Calibration",
 		"edt_conf_color_channelAdjustment_header_title" : "Color channel adjustments",
-		"edt_conf_color_imageToLedMappingType" : "Image2led mapping type",
-		"edt_conf_color_channelAdjustment_enable" : "Enable channel adjustment",
-		"edt_conf_color_channelAdjustment_v4l_only" : "Assign USB Capture only",
-		"edt_conf_color_id" : "ID",
-		"edt_conf_color_leds" : "LED index",
-		"edt_conf_color_black" : "black",
-		"edt_conf_color_white" : "white",
-		"edt_conf_color_red" : "red",
-		"edt_conf_color_green" : "green",
-		"edt_conf_color_blue" : "blue",
-		"edt_conf_color_cyan" : "cyan",
-		"edt_conf_color_magenta" : "magenta",
-		"edt_conf_color_yellow" : "yellow",
-		"edt_conf_color_gamma_red" : "gamma red",
-		"edt_conf_color_gamma_green" : "gamma green",
-		"edt_conf_color_gamma_blue" : "gamma blue",
-		"edt_conf_color_brightness_min" : "minimal brightness",
-		"edt_conf_color_brightness" : "maximal brightness",
+		"edt_conf_color_imageToLedMappingType_title" : "Led area assignment",
+		"edt_conf_color_imageToLedMappingType_expl" : "Overwrites the led area assignment of your led layout if it's not \"multicolor\"",
+		"edt_conf_color_channelAdjustment_enable_title" : "Enable channel adjustment",
+		"edt_conf_color_channelAdjustment_enable_expl" : "Activates the adjustment option",
+		"edt_conf_color_channelAdjustment_v4l_only_title" : "Assign USB Capture only",
+		"edt_conf_color_id_title" : "ID",
+		"edt_conf_color_id_expl" : "User given name",
+		"edt_conf_color_leds_title" : "LED index",
+		"edt_conf_color_leds_expl" : "Assign this adjustment to all leds (*) or just some (0-24).",
+		"edt_conf_color_black_title" : "black",
+		"edt_conf_color_black_expl" : "The calibrated black value.",
+		"edt_conf_color_white_title" : "white",
+		"edt_conf_color_white_expl" : "The calibrated white value.",
+		"edt_conf_color_red_title" : "red",
+		"edt_conf_color_red_expl" : "The calibrated red value.",
+		"edt_conf_color_green_title" : "green",
+		"edt_conf_color_green_expl" : "The calibrated green value.",
+		"edt_conf_color_blue_title" : "blue",
+		"edt_conf_color_blue_expl" : "The calibrated blue value.",
+		"edt_conf_color_cyan_title" : "cyan",
+		"edt_conf_color_cyan_expl" : "The calibrated cyan value.",
+		"edt_conf_color_magenta_title" : "magenta",
+		"edt_conf_color_magenta_expl" : "The calibrated magenta value.",
+		"edt_conf_color_yellow_title" : "yellow",
+		"edt_conf_color_yellow_expl" : "The calibrated yellow value.",
+		"edt_conf_color_gamma_red_title" : "gamma red",
+		"edt_conf_color_gamma_red_expl" : "The gamma of red.",
+		"edt_conf_color_gamma_green_title" : "gamma green",
+		"edt_conf_color_gamma_green_expl" : "The gamma of green.",
+		"edt_conf_color_gamma_blue_title" : "gamma blue",
+		"edt_conf_color_gamma_blue_expl" : "The gamma of blue.",
+		"edt_conf_color_brightness_min_title" : "minimal brightness",
+		"edt_conf_color_brightness_min_expl" : "The minimum amount of brightness (backlight).",
+		"edt_conf_color_brightness_title" : "maximal brightness",
+		"edt_conf_color_brightness_expl" : "From 0.0 to 0.5 the brightness is linearised, from 0.5 to 1.0 cyan, magenta, yellow is up to 2x brighter and white 3x.",
 		"edt_conf_smooth_heading_title" : "Smoothing",
 		"edt_conf_smooth_type_title" : "Type",
 		"edt_conf_smooth_type_expl" : "Type of smoothing.",
@@ -442,6 +496,7 @@
 		"edt_conf_effp_disable_itemtitle" : "Effect",
 		"edt_conf_log_heading_title" : "Logging",
 		"edt_conf_log_level_title" : "Log-Level",
+		"edt_conf_log_level_expl" : "Depending on loglevel you see less or more messages in your log.",
 		"edt_eff_candle_header_title" : "Candle",
 		"edt_eff_police_header_title" : "Police",
 		"edt_eff_fade_header_title" : "Fade",
