--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -8,6 +8,7 @@
 		"last-updated": "2016-11-30",
         "message-documentation": "qqq"
     },
+		"general_webui_title" : "Hyperion - Web Konfiguration",
 		"general_country_de" : "Deutschland",
 		"general_country_us" : "Amerika",
 		"general_country_uk" : "England",
@@ -18,6 +19,7 @@
 		"general_speech_de" : "Deutsch",
 		"general_speech_en" : "Englisch",
 		"general_access_default" : "Standard",
+		"general_access_advanced" : "Fortgeschritten",
 		"general_access_expert" : "Experte",
 		"general_comp_SMOOTHING" : "Glättung",
 		"general_comp_BLACKBORDER" : "Schwarze Balken Erkennung",
@@ -36,7 +38,10 @@
 		"general_btn_continue" : "Fortfahren",
 		"general_btn_save" : "Speichern",
 		"general_btn_saverestart" : "Speichern und neustarten",
+		"general_btn_saveandreload" : "Speichern und neu laden",
 		"general_btn_restarthyperion" : "Hyperion neustarten",
+		"general_btn_off" : "Aus",
+		"general_btn_on" : "An",
 		"dashboard_label_intro" : "Das Dashboard zeigt dir Informationen zum Systemstatus, ob Updates verfügbar sind, den Komponentenstatus sowie die letzten Blog-Posts vom Hyperion Team.",
 		"dashboard_infobox_label_title" : "Information",
 		"dashboard_infobox_label_currenthyp" : "Deine Hyperion Version:",
@@ -66,16 +71,25 @@
 		"main_menu_system_token" : "System",
 		"main_menu_input_selection_token" : "Eingabeauswahl",
 		"main_menu_logging_token" : "Protokoll",
-		"main_menu_webconfig_token" : "Web konfiguration",
+		"main_menu_webconfig_token" : "Web Konfiguration",
+		"main_ledsim_title" : "LED Visualisierung",
+		"main_ledsim_text" : "Eine live Visualisierung deiner LED Farben, sofern verfügbar kann ein live Video dazugeschalten werden. (Achtung: Ressourcenhungrig)",
+		"main_ledsim_btn_toggleleds" : "Zeige LEDs",
+		"main_ledsim_btn_togglelednumber" : "LED Nummern",
+		"main_ledsim_btn_togglelivevideo" : "Live Video",
 		"conf_general_label_title" : "Allgemeine Einstellungen",
 		"conf_general_label_intro" : "Grundsätzliche Einstellungen zu Hyperion oder WebUI, die in keine andere Kategorie passen.",
+		"conf_general_impexp_title" : "Importiere/Exportiere Konfiguration",
+		"conf_general_impexp_l1" : "Importiere eine Konfiguration, indem du unten eine Datei auswählst und anschließend auf \"Importieren\" klickst.",
+		"conf_general_impexp_l2" : "Exportiere eine Konfiguration, indem du auf \"Exportieren\" klickst. Dein Browser startet einen Download.",
+		"conf_general_impexp_impbtn" : "Importieren",
+		"conf_general_impexp_expbtn" : "Exportieren",
 		"conf_helptable_option" : "Option",
 		"conf_helptable_expl" : "Erklärung",
 		"conf_effects_label_intro" : "Stelle einen Effekt oder Farbe ein, der beim Starten sichtbar sein soll. Stelle einen Hintergrundeffekt/Farbe ein der erst sichtbar wird, wenn alle Bildquellen abgeschaltet sind (Das gilt ebenfalls für temporäres abschalten mithilfe der Kodi Überwachung).",
 		"conf_leds_label_intro" : "Der LED Hardware Bereich ermöglicht eine Vielzahl von Ausgabemöglichkeiten über Raspberry Pi GPIO, USB oder Netzwerk. Erstelle ein LED Layout das zu deinem Aufbau passt und schon kann es losgehen!",
 		"conf_leds_nav_label_ledcontroller" : "LED Steuerung",
 		"conf_leds_nav_label_ledlayout" : "LED Layout",
-		"conf_leds_nav_label_ledtesting" : "LED Test",
 		"conf_leds_contr_label_contrtype" : "Steuerungstyp:",
 		"conf_leds_optgroup_RPiSPI" : "RPi SPI",
 		"conf_leds_optgroup_RPiPWM" : "RPi PWM",
@@ -104,7 +118,7 @@
 		"conf_leds_layout_cl_reversdir" : "Richtung umkehren",
 		"conf_leds_layout_cl_hleddepth" : "Horizontale LED Tiefe",
 		"conf_leds_layout_cl_vleddepth" : "Vertikale LED Tiefe",
-		"conf_leds_layout_cl_generate" : "Generiere LED Konfiguartion",
+		"conf_leds_layout_cl_generate" : "Generiere LED Konfiguration",
 		"conf_leds_layout_cl_edgegap" : "Rahmenabstand",
 		"conf_leds_layout_cl_cornergap" : "Eckabstand",
 		"conf_leds_layout_ma_horiz" : "Horizontal",
@@ -122,10 +136,6 @@
 		"conf_leds_layout_ma_optbottomright" : "Unten rechts",
 		"conf_leds_layout_textf1" : "Das Textfeld zeigt dir dein aktuell geladenes Layout, sofern du kein neues Layout mit den Optionen unten erstellt hast. Optional kann man die Werte hier weiter bearbeiten.",
 		"conf_leds_layout_textf2" : "Vergiss nicht zu speichern!",
-		"conf_leds_test_button_toggleleds" : "LEDs",
-		"conf_leds_test_button_togglelednumber" : "LED Nummerierung",
-		"conf_leds_test_button_toggleliveleds" : "LED Echtzeitansicht",
-		"conf_leds_test_button_togglelivevideo" : "Grabber Echtzeitansicht",
 		"conf_grabber_label_intro" : "Hyperion unterstützt 2 Hauptarten wie Bilder aufgenommen werden können. Zum Einen die Plattform Aufnahme, die sich direkt am System bedient auf dem Hyperion läuft (beste Qualität). Zum Anderen die USB Aufnahme, die sich an einem angeschlossenen Gerät bedient die benötigten Informationen für die Verarbeitung und Ausgabe zu erhalten (Mehr Konfigurationsaufwand und Kalibrierung)",
 		"conf_colors_label_intro" : "Neben der Farbkalibrierung, gehört auch die Glättung (sanfte Farbübergänge) und die Erkennung von störenden (schwarzen) Balken zur Bildverarbeitung.",
 		"conf_network_label_intro" : "Alle Einstellungen zu Ports, der Weiterleitung von JSON/PROTO und Boblight sowie UDP Listener.",
@@ -142,10 +152,18 @@
 		"remote_effects_label_effects" : "Effekt:",
 		"remote_input_label_sourceselection" : "Quellenauswahl",
 		"remote_input_label_autoselect" : "Automatische Auswahl",
+		"remote_input_setsource_btn" : "Wähle Quelle",
+		"remote_input_sourceactiv_btn" : "Quelle aktiv",
+		"remote_input_origin" : "Ursprung",
+		"remote_input_owner" : "Typ",
+		"remote_input_priority" : "Priorität",
+		"remote_input_status" : "Status/Aktion",
+		"remote_input_duration" : "Dauer:",
+		"remote_input_ip" : "IP:",
 		"remote_components_label_components" : "Komponentensteuerung",
 		"remote_optgroup_usreffets" : "Benutzer Effekte",
 		"remote_optgroup_syseffets" : "Mitgelieferte Effekte",
-		"remote_help_text" : "Hyperion nutzt ein Prioritätensystem um die Quelle zu wählen. Alles was du setzte hat eine Prioität (Effekte/Farben/Plattform Capture/USB Capture und Netzwerkquellen). Standartmäßig nutzt Hyperion die Quelle mit der niedrigsten Prioität. Hier hast du die Möglichkeit die Quelle manuell auszuwählen.",
+		"remote_help_text" : "Hyperion nutzt ein Prioritätensystem um die Quelle zu wählen. Alles was du setzte hat eine Prioität (Effekte/Farben/Plattform Aufnahme/USB Aufnahme und Netzwerkquellen). Standardmäßig nutzt Hyperion die Quelle mit der niedrigsten Prioität. Hier kannst du direkt die Quelle auswählen.",
 		"remote_maptype_label" : "Farbzuordnung",
 		"remote_maptype_label_multicolor_mean" : "Mehrfarbig",
 		"remote_maptype_label_unicolor_mean" : "Einfarbig",
@@ -162,8 +180,8 @@
 		"effectsconfigurator_label_chooseeff" : "Basis-Effekt auswählen:",
 		"effectsconfigurator_button_saveeffect" : "Effekt speichern",
 		"effectsconfigurator_label_effectname" : "Effektname",
-		"effectsconfigurator_button_starttest" : "Starte Effekttest",
-		"effectsconfigurator_button_stoptest" : "Stoppe Effekttest",
+		"effectsconfigurator_button_starttest" : "Starte Test",
+		"effectsconfigurator_button_stoptest" : "Stoppe Test",
 		"effectsconfigurator_button_conttest" : "Fortlaufender Test",
 		"effectsconfigurator_label_deleffect" : "Effekt entfernen:",
 		"effectsconfigurator_button_deleffect" : "Effekt entfernen",
@@ -195,16 +213,23 @@
 		"update_versreminder" : "Deine Version: $1",
 		"info_conlost_label_title" : "Verbindung zum Hyperion Service unterbrochen!",
 		"info_conlost_label_reason" : "Mögliche Ursachen:",
-		"info_conlost_label_reason1" : "- Hyperion startet neu",
+		"info_conlost_label_reason1" : "- Schlechte WLAN Verbindung",
 		"info_conlost_label_reason2" : "- Ein Update wird durchgeführt",
 		"info_conlost_label_reason3" : "- Hyperion wird nicht mehr ausgeführt",
 		"info_conlost_label_autorecon" : "Du wirst verbunden, sobald Hyperion wieder verfügbar ist",
 		"info_conlost_label_autorefresh" : "Diese Seite wird automatisch aktualisiert",
 		"info_conlost_label_reload" : "Wenn nicht, klicke hier",
+		"info_restart_title" : "Startet gerade neu...",
+		"info_restart_rightback" : "Hyperion ist gleich wieder für dich da!",
+		"info_restart_contus" : "Solltest du nach 20 Sekunden immer noch hier sein, ist etwas schief gelaufen. Öffne bitte in unserem Support Forum ein neues Thema...",
+		"info_restart_contusa" : "...mit deinen letztes Schritten. Danke!",
+		"infoDialog_general_success_title" : "Erfolg",
+		"infoDialog_general_error_title" : "Fehler",
+		"infoDialog_general_warning_title" : "Warnung",
 		"infoDialog_leds_gap_title" : "Lücke verloren!",
 		"infoDialog_leds_gap_text" : "Deine LED Lücke/Position ist größer als die Anzahl der LEDs, verringere die Lückenposition und/oder Lückenlänge!",
 		"InfoDialog_leds_validfail_title" : "JSON Überprüfung fehlgeschlagen!",
-		"infoDialog_effconf_deleted_title" : "Effekt entnfernt!",
+		"infoDialog_effconf_deleted_title" : "Effekt entfernt!",
 		"infoDialog_effconf_deleted_text" : "Der Effekt \"$1\" wurde erfolgreich entfernt!",
 		"infoDialog_effconf_created_title" : "Effekt erstellt!",
 		"infoDialog_effconf_created_text" : "Der Effekt \"$1\" wurde erfolgreich erstellt!",
@@ -212,23 +237,30 @@
 		"infoDialog_effconf_invalidvalue_text" : "Es wurde ein unzulässiger Wert eingetragen, überprüfe das rot markierte Feld und versuche es erneut!",
 		"InfoDialog_lang_title" : "Spracheinstellung",
 		"InfoDialog_lang_text" : "Sollte dir die Vorauswahl der automatischen Spracherkennung nicht gefallen, kannst du die Sprache hier manuell festlegen.",
-		"InfoDialog_access_title" : "Zugriffsstufe",
-		"InfoDialog_access_text" : "Abhängig von der Stufe hast du Zugriff auf mehr oder weniger Einstellungen. Empfohlen ist 'Standard'.",
+		"InfoDialog_access_title" : "Einstellungsstufe",
+		"InfoDialog_access_text" : "Je höher die Stufe je mehr Einstellungen und Funktionen stehen zur Verfügung. Empfohlen ist \"Standard\".",
 		"InfoDialog_nowrite_title" : "Fehler beim Schreibzugriff!",
 		"InfoDialog_nowrite_text" : "Hyperion hat keinen Schreibzugriff auf die aktuell geladene Konfiguration. Bitte korrigiere die Dateizugriffsrechte um fortzufahren.",
 		"InfoDialog_nowrite_foottext" : "Die Webkonfiguration wird automatisch wieder freigegeben, sobald das Problem behoben wurde!",
-		"infoDialog_wizrgb_title" : "Erfolg!",
 		"infoDialog_wizrgb_text" : "Deine RGB Byte Reihenfolge ist bereits richtig eingestellt.",
-		"infoDialog_writeconf_error_title" : "Fehler",
 		"infoDialog_writeconf_error_text" : "Das speichern der Konfiguration ist fehlgeschlagen.",
+		"infoDialog_import_jsonerror_text" : "Die ausgewählte Konfigurations-Datei \"$1\" ist keine .json Datei oder ist beschädigt! Fehlermeldung: ($2)",
+		"infoDialog_import_hyperror_text" : "Die ausgewählte Konfigurations-Datei \"$1\" kann nicht importiert werden. Sie ist nicht kompatibel mit Hyperion 2.0 und höher!",
+		"infoDialog_import_reverror_text" : "Die Version deiner Konfigurations-Datei \"$1\" stimmt nicht mit deiner Hyperion Version überein (Datei: $2, Hyperion: $3). Du kannst nur übereinstimmende Versionen importieren!",
+		"infoDialog_import_comperror_text" : "Dein Browser unterstützt leider keinen Import. Bitte versuche es mit einem anderen Browser erneut.",
+		"infoDialog_import_confirm_title" : "Bestätige Import",
+		"infoDialog_import_confirm_text" : "Bist du sicher, dass du die Konfigurations-Datei \"$1\" importieren möchtest? Diese Aktion kann nicht rückgängig gemacht werden!",
 		"wiz_rgb_title" : "RGB Byte Reihenfolge Assistent",
 		"wiz_rgb_intro1" : "Dieser Assisent wird dir dabei helfen die richtige Byte Reihenfolge für deine leds zu finden. Klicke auf Fortfahren um zu beginnen.",
 		"wiz_rgb_intro2" : "Wann benötigt man diesen Assistenten? Zur Erstkonfiguration oder wenn deine LEDs zb rot leuchten sollten, sie aber blau oder grün sind.",
 		"wiz_rgb_expl" : "Der Farbpunkt ändert alle x Sekunden die Farbe (rot, grün), zur selben Zeit ändern deine LEDs die Farbe ebenfalls. Beantworte die Fragen unten, um deine RGB Byte Reihenfolge zu überprüfen/korrigieren.",
 		"wiz_rgb_switchevery" : "Ändere Farbe alle...",
-		"wiz_rgb_q" : "Welche Farbe haben deine LEDs, wenn der Farbpunkt oben...",
+		"wiz_rgb_q" : "Welche Farbe zeigen deine LEDs, wenn der Farbpunkt oben...",
 		"wiz_rgb_qrend" : "...rot ist?",
 		"wiz_rgb_qgend" : "...grün ist?",
+		"edt_dev_enum_subtract_minimum" : "Subtrahiere minimum",
+		"edt_dev_enum_sub_min_warm_adjust" : "Minimale Anpassung: warm",
+		"edt_dev_enum_white_off" : "Weiß ist aus",
 		"edt_dev_general_heading_title" : "Allgemeine Einstellungen",
 		"edt_dev_general_ledCount_title" : "Anzahl Hardware LEDs",
 		"edt_dev_general_colorOrder_title" : "RGB Byte Reihenfolge",
@@ -296,6 +328,13 @@
 		"edt_conf_enum_linear" : "Linear",
 		"edt_conf_enum_PAL" : "PAL",
 		"edt_conf_enum_NTSC" : "NTSC",
+		"edt_conf_enum_logsilent" : "Stille",
+		"edt_conf_enum_logwarn" : "Warnung",
+		"edt_conf_enum_logverbose" : "Ausführlich",
+		"edt_conf_enum_logdebug" : "Debug",
+		"edt_conf_enum_bbdefault" : "Standard",
+		"edt_conf_enum_bbclassic" : "Klassisch",
+		"edt_conf_enum_bbosd" : "OSD",
 		"edt_conf_gen_heading_title" : "Allgemeine Einstellungen",
 		"edt_conf_gen_name_title" : "Name der Konfiguration",
 		"edt_conf_gen_name_expl" : "Der Name wird verwendet, um Hyperion besser zu identifizieren. (Hilfreich bei mehreren Instanzen)",
@@ -303,24 +342,42 @@
 		"edt_conf_gen_showOptHelp_expl" : "Zeige alle verfügbaren Options-Erklärungen. Empfohlen für Anfänger",
 		"edt_conf_color_heading_title" : "Farbkalibrierung",
 		"edt_conf_color_channelAdjustment_header_title" : "Anpassung Farbkanäle",
-		"edt_conf_color_imageToLedMappingType" : "Bild2LED Zuordnungstyp",
-		"edt_conf_color_channelAdjustment_enable" : "Aktiviere Farbkanalanpassung",
-		"edt_conf_color_channelAdjustment_v4l_only" : "Nur für USB Aufnahme",
-		"edt_conf_color_id" : "ID",
-		"edt_conf_color_leds" : "LED index",
-		"edt_conf_color_black" : "Schwarz",
-		"edt_conf_color_white" : "Weiß",
-		"edt_conf_color_red" : "Rot",
-		"edt_conf_color_green" : "Grün",
-		"edt_conf_color_blue" : "Blau",
-		"edt_conf_color_cyan" : "Cyan",
-		"edt_conf_color_magenta" : "Magenta",
-		"edt_conf_color_yellow" : "Gelb",
-		"edt_conf_color_gamma_red" : "Gamma rot",
-		"edt_conf_color_gamma_green" : "Gamma grün",
-		"edt_conf_color_gamma_blue" : "Gamma blau",
-		"edt_conf_color_brightness_min" : "Minimale Helligkeit",
-		"edt_conf_color_brightness" : "Maximale Helligkeit",
+		"edt_conf_color_channelAdjustment_header_expl" : "Passe die Farbkanäle deinen LEDs an",
+		"edt_conf_color_imageToLedMappingType_title" : "LED-Bereich Zuordnungstyp",
+		"edt_conf_color_imageToLedMappingType_expl" : "Sofern nicht \"Mehrfarbig\", wird dein LED Layout mit einer anderen Bildzuweisung überschrieben",
+		"edt_conf_color_channelAdjustment_enable_title" : "Aktiviere Farbkanalanpassung",
+		"edt_conf_color_channelAdjustment_enable_expl" : "Aktiviere die Farbkanalanpassung",
+		"edt_conf_color_channelAdjustment_v4l_only_title" : "Nur für USB Aufnahme",
+		"edt_conf_color_id_title" : "ID",
+		"edt_conf_color_id_expl" : "Eine vom Benutzer frei angegebene ID.",
+		"edt_conf_color_leds_title" : "LED index",
+		"edt_conf_color_leds_expl" : "Zugewiesen zu allen (*) LEDs oder nur zu bestimmten LED Nummern (0-17).",
+		"edt_conf_color_black_title" : "Schwarz",
+		"edt_conf_color_black_expl" : "Kalibrierter Schwarzwert.",
+		"edt_conf_color_white_title" : "Weiß",
+		"edt_conf_color_white_expl" : "Kalibrierter Weißwert.",
+		"edt_conf_color_red_title" : "Rot",
+		"edt_conf_color_red_expl" : "Kalibrierter Rotwert.",
+		"edt_conf_color_green_title" : "Grün",
+		"edt_conf_color_green_expl" : "Kalibrierter Grünwert.",
+		"edt_conf_color_blue_title" : "Blau",
+		"edt_conf_color_blue_expl" : "Kalibrierter Blauwert.",
+		"edt_conf_color_cyan_title" : "Cyan",
+		"edt_conf_color_cyan_expl" : "Kalibrierter Cyanwert.",
+		"edt_conf_color_magenta_title" : "Magenta",
+		"edt_conf_color_magenta_expl" : "Kalibrierter Magentawert.",
+		"edt_conf_color_yellow_title" : "Gelb",
+		"edt_conf_color_yellow_expl" : "Kalibrierter Gelbwert.",
+		"edt_conf_color_gamma_red_title" : "Gamma rot",
+		"edt_conf_color_gamma_red_expl" : "Gamma von rot.",
+		"edt_conf_color_gamma_green_title" : "Gamma grün",
+		"edt_conf_color_gamma_green_expl" : "Gamma von grün.",
+		"edt_conf_color_gamma_blue_title" : "Gamma blau",
+		"edt_conf_color_gamma_blue_expl" : "Gamma von blau",
+		"edt_conf_color_brightness_min_title" : "Minimale Helligkeit",
+		"edt_conf_color_brightness_min_expl" : "Auch als Hintergrundhelligkeit genutzt.",
+		"edt_conf_color_brightness_title" : "Maximale Helligkeit",
+		"edt_conf_color_brightness_expl" : "Zwischen 0.0 und 0.5 ist die Helligkeit linearisiert. Von 0.5 bis 1.0 wird cyan, magenta und gelb bis zu 2x heller und weiß bis zu 3x.",
 		"edt_conf_smooth_heading_title" : "Glättung",
 		"edt_conf_smooth_type_title" : "Art",
 		"edt_conf_smooth_type_expl" : "Algorithmus der Glättung.",
@@ -428,7 +485,7 @@
 		"edt_conf_ps_heading_title" : "PROTO Server",
 		"edt_conf_bobls_heading_title" : "Boblight Server",
 		"edt_conf_udpl_heading_title" : "UDP Listener",
-		"edt_conf_udpl_address_title" : "Addresse",
+		"edt_conf_udpl_address_title" : "Adresse",
 		"edt_conf_udpl_timeout_title" : "Zeitüberschreitung",
 		"edt_conf_udpl_shared_title" : "Gemeinsam genutzt",
 		"edt_conf_webc_heading_title" : "Web Konfiguration",
@@ -441,6 +498,7 @@
 		"edt_conf_effp_disable_itemtitle" : "Effekt",
 		"edt_conf_log_heading_title" : "Protokoll",
 		"edt_conf_log_level_title" : "Protokollstufe",
+		"edt_conf_log_level_expl" : "Abhängig der Stufe sind weniger oder mehr Meldungen sichtbar.",
 		"edt_eff_candle_header_title" : "Kerze",
 		"edt_eff_police_header_title" : "Polizei",
 		"edt_eff_fade_header_title" : "Farbübergang",
