Moved Hue Wizard to the real Wizard menu
Moved the wizard for adding a user to the new wizard menu and deleted
the wizard in the LED Configuration

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -167,15 +167,6 @@
 		"remote_maptype_label" : "Farbzuordnung",
 		"remote_maptype_label_multicolor_mean" : "Mehrfarbig",
 		"remote_maptype_label_unicolor_mean" : "Einfarbig",
-		"hue_button_create_user_token" : "Benutzer anlegen",
-		"hue_press_link_modal" : "Bitte Link Taste auf der Hue Bridge drücken.",
-		"hue_failure_connection_token" : "Connection Timeout. Bitte drücke die Taste rechtzeitig.",
-		"hue_button_pair" : "Verbinden",
-		"hue_btn_setup_helper" : "Hue Bridge Einrichtungshilfe",
-		"hue_failure_ip_token" : "Bitte überprüfe deine IP Adresse.",
-		"hue_label_username" : "Benutzername:",
-		"hue_label_ip" : "Hue Bridge IP:",
-		"hue_help_text" : "Mit diesem Setupassistenten kannst du einen neuen User auf der Hue Bridge anlegen und deine LightIDs für die Hyperion Konfiguration herausfinden. Wenn du bereits einen eingetragenen User hast, siehst du diesen bereits untenstehend eingetragen. Du kannst allerdings jederzeit einen neuen Anlegen. Beachte: Dies ist nur ein Assistent. Du musst die Daten in die Konfiguration kopieren.",
 		"effectsconfigurator_label_intro" : "Erstelle auf Grundlage der Basiseffekte neue Effekt die nach deinen Wünschen angepasst sind. Je nach Effekt stehen Optionen wie Farbe, Geschwindigkeit, oder Richtung und vieles mehr zur Auswahl.",
 		"effectsconfigurator_label_chooseeff" : "Basis-Effekt auswählen:",
 		"effectsconfigurator_button_saveeffect" : "Effekt speichern",
@@ -258,6 +249,15 @@
 		"wiz_rgb_q" : "Welche Farbe zeigen deine LEDs, wenn der Farbpunkt oben...",
 		"wiz_rgb_qrend" : "...rot ist?",
 		"wiz_rgb_qgend" : "...grün ist?",
+    "wiz_hue_title" : "Hue Bridge Einrichtungshilfe",
+    "wiz_hue_intro1" : "Mit diesem Setupassistenten kannst du einen neuen User auf der Hue Bridge anlegen und deine LightIDs für die Hyperion Konfiguration herausfinden.",
+    "wiz_hue_intro2" : "Beachte: Dies ist nur ein Assistent. Du musst die Daten in die Konfiguration kopieren.",
+    "wiz_hue_ip" : "Hue Bridge IP:",
+    "wiz_hue_username" : "Benutzername:",
+    "wiz_hue_create_user" : "Benutzer anlegen",
+    "wiz_hue_failure_ip" : "Bitte überprüfe deine IP Adresse.",
+    "wiz_hue_failure_connection" : "Connection Timeout. Bitte drücke die Taste rechtzeitig.",
+    "wiz_hue_press_link" : "Bitte Link Taste auf der Hue Bridge drücken.",
 		"edt_dev_enum_subtract_minimum" : "Subtrahiere minimum",
 		"edt_dev_enum_sub_min_warm_adjust" : "Minimale Anpassung: warm",
 		"edt_dev_enum_white_off" : "Weiß ist aus",
