--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -48,7 +48,6 @@
 		"dashboard_infobox_label_title" : "Information",
 		"dashboard_infobox_label_currenthyp" : "Deine Hyperion Version:",
 		"dashboard_infobox_label_latesthyp" : "Aktuellste Hyperion Version:",
-		"dashboard_infobox_label_leddevice" : "LED Typ:",
 		"dashboard_infobox_label_device" : "Systeminformation:",
 		"dashboard_infobox_message_updatewarning" : "Eine aktuellere Version von Hyperion ist verfügbar! (V$1)",
 		"dashboard_infobox_message_updatesuccess" : "Du nutzt die aktuellste Version von Hyperion.",
@@ -193,15 +192,6 @@
 		"remote_maptype_intro" : "Wechsle zwischen verschiedenen Typen um die Auswirkungen besser vergleichen zu können. $1",
 		"remote_maptype_label_multicolor_mean" : "Mehrfarbig",
 		"remote_maptype_label_unicolor_mean" : "Einfarbig",
-		"hue_button_create_user_token" : "Benutzer anlegen",
-		"hue_press_link_modal" : "Bitte Link Taste auf der Hue Bridge drücken.",
-		"hue_failure_connection_token" : "Connection Timeout. Bitte drücke die Taste rechtzeitig.",
-		"hue_button_pair" : "Verbinden",
-		"hue_btn_setup_helper" : "Hue Bridge Einrichtungshilfe",
-		"hue_failure_ip_token" : "Bitte überprüfe deine IP Adresse.",
-		"hue_label_username" : "Benutzername:",
-		"hue_label_ip" : "Hue Bridge IP:",
-		"hue_help_text" : "Mit diesem Setupassistenten kannst du einen neuen User auf der Hue Bridge anlegen und deine LightIDs für die Hyperion Konfiguration herausfinden. Wenn du bereits einen eingetragenen User hast, siehst du diesen bereits untenstehend eingetragen. Du kannst allerdings jederzeit einen neuen Anlegen. Beachte: Dies ist nur ein Assistent. Du musst die Daten in die Konfiguration kopieren.",
 		"effectsconfigurator_label_intro" : "Erstelle auf Grundlage der Basiseffekte neue Effekt die nach deinen Wünschen angepasst sind. Je nach Effekt stehen Optionen wie Farbe, Geschwindigkeit, oder Richtung und vieles mehr zur Auswahl.",
 		"effectsconfigurator_label_chooseeff" : "Basis-Effekt auswählen:",
 		"effectsconfigurator_button_saveeffect" : "Effekt speichern",
@@ -287,6 +277,15 @@
 		"wiz_rgb_q" : "Welche Farbe zeigen deine LEDs, wenn der Farbpunkt oben...",
 		"wiz_rgb_qrend" : "...rot ist?",
 		"wiz_rgb_qgend" : "...grün ist?",
+		"wiz_hue_title" : "Hue Bridge Assistent",
+		"wiz_hue_intro1" : "Mit diesem Setupassistenten kannst du einen neuen User auf der Hue Bridge anlegen und deine LightIDs für die Hyperion Konfiguration herausfinden.",
+		"wiz_hue_intro2" : "Beachte: Dies ist nur ein Assistent. Du musst die Daten in die Konfiguration kopieren.",
+		"wiz_hue_ip" : "Hue Bridge IP:",
+		"wiz_hue_username" : "Benutzername:",
+		"wiz_hue_create_user" : "Benutzer anlegen",
+		"wiz_hue_failure_ip" : "Bitte überprüfe deine IP Adresse.",
+		"wiz_hue_failure_connection" : "Connection Timeout. Bitte drücke die Taste rechtzeitig.",
+		"wiz_hue_press_link" : "Bitte Link Taste auf der Hue Bridge drücken.",
 		"wiz_cc_title" : "Farbkalibrierungs Assistent",
 		"wiz_cc_intro1" : "Der Assistent wird dich durch die Kalibrierung deiner LEDs leiten. Sofern du Kodi nutzt, können die Bilder und Testvideos direkt an Kodi geschickt werden. Andernfalls musst du das Material selbst herunterladen und anwenden.",
 		"wiz_cc_kwebs" : "Kodi Webserver (IP:Port)",
