--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -48,7 +48,6 @@
 		"dashboard_infobox_label_title" : "Information",
 		"dashboard_infobox_label_currenthyp" : "Your Hyperion version:",
 		"dashboard_infobox_label_latesthyp" : "Latest Hyperion version:",
-		"dashboard_infobox_label_leddevice" : "LED Controller:",
 		"dashboard_infobox_label_device" : "System:",
 		"dashboard_infobox_message_updatewarning" : "A newer version of Hyperion is available! (V$1)",
 		"dashboard_infobox_message_updatesuccess" : "You run the latest version of Hyperion.",
@@ -193,15 +192,6 @@
 		"remote_maptype_intro" : "Change the mapping type during runtime. $1",
 		"remote_maptype_label_multicolor_mean" : "Multicolor",
 		"remote_maptype_label_unicolor_mean" : "Unicolor",
-		"hue_button_create_user_token" : "Create User",
-		"hue_press_link_modal" : "Please press link button on the Hue Bridge.",
-		"hue_failure_connection_token" : "Connection Timeout. Please press the button in time.",
-		"hue_button_pair" : "Connect",
-		"hue_btn_setup_helper" : "Hue Bridge Setup Helper",
-		"hue_failure_ip_token" : "Please check your IP Address.",
-		"hue_label_username" : "Hue Bridge Username",
-		"hue_label_ip" : "Hue Bridge IP:",
-		"hue_help_text" : "With this Setup Helper you can get a new User for your Hue Bridge and you can see your Lights with the IDs for Hyperion Configuration. If you already have a working User you will see it below. But you can always create a new one as well. Remember: This is only a helper. You have to copy and paste them in your config above.",
 		"effectsconfigurator_label_intro" : "Create out of the base effects new effects that are tuned to your liking. Depending on Effect there are options like color, speed, direction and more available.",
 		"effectsconfigurator_label_chooseeff" : "Choose Base-Effect:",
 		"effectsconfigurator_button_saveeffect" : "Save Effect",
@@ -287,6 +277,15 @@
 		"wiz_rgb_q" : "Which color show your leds, when the color dot above shows...",
 		"wiz_rgb_qrend" : "...red?",
 		"wiz_rgb_qgend" : "...green?",
+		"wiz_hue_title" : "Hue Bridge Wizard",
+		"wiz_hue_intro1" : "With this Setup Helper you can get a new User for your Hue Bridge and you can see your Lights with the IDs for Hyperion Configuration.",
+		"wiz_hue_intro2" : "Remember: This is only a wizard. You have to copy and paste them in your config.",
+		"wiz_hue_ip" : "Hue Bridge IP:",
+		"wiz_hue_username" : "Username:",
+		"wiz_hue_create_user" : "Create User",
+		"wiz_hue_failure_ip" : "Please check your IP Address.",
+		"wiz_hue_failure_connection" : "Connection Timeout. Please press the button in time.",
+		"wiz_hue_press_link" : "Please press link button on the Hue Bridge.",
 		"wiz_cc_title" : "Color calibration wizard",
 		"wiz_cc_intro1" : "This wizard will guide you through your led calibration. If you are using Kodi, the calibration pictures and videos can be send directly to kodi without further tasks on your side. If not, you need to download these files yourself and apply them, if the wizard wants it.",
 		"wiz_cc_kwebs" : "Kodi webserver (IP:Port)",
