add eff schemas

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -555,7 +555,9 @@
 		"edt_eff_fade_header_title" : "Farbübergang",
 		"edt_eff_rainbowmood_header_title" : "Regenbogen",
 		"edt_eff_knightrider_header_title" : "Knight Rider",
-		"edt_eff_lightclock_header_title" : "Lichtuhr",
+		"edt_eff_lightclock_header_title" : "Uhr 1",
+		"edt_eff_clock_header_title" : "Uhr 2",
+		"edt_eff_pacman_header_title" : "Pac-Man",
 		"edt_eff_moodblobs_header_title" : "Stimmungskugeln",
 		"edt_eff_rainbowswirl_header_title" : "Regenbogenwirbel",
 		"edt_eff_random_header_title" : "Zufällig",
@@ -608,6 +610,13 @@
 		"edt_eff_min_len_title" : "Minimale Länge",
 		"edt_eff_max_len_title" : "Maximale Länge",
 		"edt_eff_height_title" : "Höhe",
+		"edt_eff_offset_title" : "Verschiebung",
+		"edt_eff_colorHour_title" : "Farbe Stunde",
+		"edt_eff_colorMinute_title" : "Farbe Minute",
+		"edt_eff_colorSecond_title" : "Farbe Sekunde",
+		"edt_eff_hourMargin_title" : "Abstand Stunde",
+		"edt_eff_minuteMargin_title" : "Abstand Minute",
+		"edt_eff_secondMargin_title" : "Abstand Sekunde",
 		"edt_append_ns" : "ns",
 		"edt_append_ms" : "ms",
 		"edt_append_s" : "s",
