--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -555,7 +555,9 @@
 		"edt_eff_fade_header_title" : "Fade",
 		"edt_eff_rainbowmood_header_title" : "Rainbow Mood",
 		"edt_eff_knightrider_header_title" : "Knight Rider",
-		"edt_eff_lightclock_header_title" : "Light Clock",
+		"edt_eff_lightclock_header_title" : "Clock 1",
+		"edt_eff_clock_header_title" : "Clock 2",
+		"edt_eff_pacman_header_title" : "Pac-Man",
 		"edt_eff_moodblobs_header_title" : "Mood Blobs",
 		"edt_eff_rainbowswirl_header_title" : "Rainbow Swirl",
 		"edt_eff_random_header_title" : "Random",
@@ -608,6 +610,13 @@
 		"edt_eff_min_len_title" : "Minimal length",
 		"edt_eff_max_len_title" : "Maximal length",
 		"edt_eff_height_title" : "Height",
+		"edt_eff_offset_title" : "Offset",
+		"edt_eff_colorHour_title" : "Color hour",
+		"edt_eff_colorMinute_title" : "Color minute",
+		"edt_eff_colorSecond_title" : "Color second",
+		"edt_eff_hourMargin_title" : "Margin hour",
+		"edt_eff_minuteMargin_title" : "Margin minute",
+		"edt_eff_secondMargin_title" : "Margin second",
 		"edt_append_ns" : "ns",
 		"edt_append_ms" : "ms",
 		"edt_append_s" : "s",
