--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -161,9 +161,12 @@
 		"conf_kodi_label_title" : "Kodi Überwachung",
 		"conf_kodi_intro" : "Die Kodi Überwachung ermöglicht es dir abhängig vom Kodi Status dein ambient light an oder abzuschalten. Dies ist nicht limitiert auf das selbe Gerät. Du kannst jedes Kodi in deinem lokalen Netzwerk überwachen lassen.",
 		"conf_logging_label_intro" : "Überprüfe die Meldungen im Prokotoll um zu erfahren was Hyperion gerade beschäftigt. Je nach eingestellter Protokoll-Stufe siehst du mehr oder weniger Informationen.",
-		"conf_logging_btn_pbupload" : "Protokoll hochladen",
+		"conf_logging_btn_pbupload" : "Bericht für Supportanfrage erstellen",
 		"conf_logging_btn_autoscroll" : "Automatisch scrollen",
 		"conf_logging_nomessage" : "Keine Einträge vorhanden.",
+		"conf_logging_uploading" : "Aufbereitung der Daten...",
+		"conf_logging_yourlink" : "Link zu deinem Bericht",
+		"conf_logging_uplfailed" : "Hochladen fehlgeschlagen! Überprüfe deine Internetverbindung!",
 		"conf_webconfig_label_intro" : "Einstellungen zur Webkonfiguration. Änderungen können die Erreichbarkeit des Webinterfaces beeinflussen.",
 		"remote_losthint" : "Notiz: Alle Änderungen gehen nach einem Neustart verloren.",
 		"remote_color_label" : "Farbe/Effekt",
@@ -285,7 +288,7 @@
 		"wiz_hue_create_user" : "Benutzer anlegen",
 		"wiz_hue_failure_ip" : "Bitte überprüfe deine IP Adresse.",
 		"wiz_hue_failure_connection" : "Connection Timeout. Bitte drücke die Taste rechtzeitig.",
-		"wiz_hue_press_link" : "Bitte Link Taste auf der Hue Bridge drücken.",
+		"wiz_hue_press_link" : "Bitte \"Link\" Taste auf der Hue Bridge drücken.",
 		"wiz_cc_title" : "Farbkalibrierungs Assistent",
 		"wiz_cc_intro1" : "Der Assistent wird dich durch die Kalibrierung deiner LEDs leiten. Sofern du Kodi nutzt, können die Bilder und Testvideos direkt an Kodi geschickt werden. Andernfalls musst du das Material selbst herunterladen und anwenden.",
 		"wiz_cc_kwebs" : "Kodi Webserver (IP:Port)",
@@ -296,11 +299,11 @@
 		"wiz_cc_kodishould" : "Kodi sollte jetzt folgendes Bild anzeigen: $1",
 		"wiz_cc_lettvshow" : "Lass dabei deinen Fernseher folgendes Bild anzeigen: $1",
 		"wiz_cc_lettvshowm" : "Überprüfe dies mithilfe folgender Bildern: $1",
-		"wiz_cc_adjustit" : "Verändere dein \"$1\", bis du zufrieden bist.",
+		"wiz_cc_adjustit" : "Verändere dein \"$1\", bis du zufrieden bist. Beachte: Je mehr du reduzierst bzw von dem Standardwert abweichst, je mehr veränderst du den maximalen Farbraum, was alle Farben die daraus abgeleitet werden ebenfalls betrifft. Je nach TV/LED Farbspektrum sind die Ergebnisse unterschiedlich.",
 		"wiz_cc_adjustgamma" : "Gamma: Was du jetzt tun musst ist, jeden Gamma-Kanal so einstellen, dass der \"Grauverlauf\" auf den LEDs nicht grünlich/rötlich/bläulich aussieht. Beispiel: Sollte dein grau etwas rötlich sein bedeutet dies, dass du dein Gamma für Rot erhöhen musst um den Rot-Anteil zu verringern (Je mehr Gamma, desto weniger Farbe).",
 		"wiz_cc_chooseid" : "Wähle einen Namen für dieses Profil.",
 		"wiz_cc_btn_switchpic" : "Testbild ändern",
-		"wiz_cc_minBright" : "Zusätzlich kannst du eine minimale Helligkeit einstellen, um \"irritierende Farben\" bei fast schwarzem Bild zu vermeiden oder du den Wechsel zwischen Farbe und Aus als zu anstrengend empfindest. Diese ist deaktiviert im Zustand \"Aus\" sowie bei Farben und Effekten.",
+		"wiz_cc_backlight" : "Zusätzlich kannst du eine Hintergrundbeluchtung einstellen, um \"irritierende Farben\" bei fast schwarzem Bild zu vermeiden oder du den Wechsel zwischen Farbe und Aus als zu anstrengend empfindest. Zusätzlich kann bestimmt werden, ob diese farbig oder nur weiß sein soll. Wird automatisch deaktiviert im Zustand \"Aus\" sowie bei \"Farbe\" und \"Effekt\".",
 		"wiz_cc_testintro" : "Nun ist es an der Zeit für einen Testlauf.",
 		"wiz_cc_testintrok" : "Klicke auf einen Button, um eines der Testvideos abzuspielen.",
 		"wiz_cc_testintrowok" : "Unter folgendem Link findest du ein paar Testvideos zum herunterladen und abspielen:",
@@ -422,9 +425,10 @@
 		"edt_conf_color_gammaGreen_expl" : "Gamma von grün.",
 		"edt_conf_color_gammaBlue_title" : "Gamma blau",
 		"edt_conf_color_gammaBlue_expl" : "Gamma von blau",
-		"edt_conf_color_backlightThreshold_title" : "Minimale Helligkeit",
-		"edt_conf_color_backlightColored_title" : "Farbige Hintergrundbeleuchtung",
-		"edt_conf_color_brightnessMin_expl" : "Auch als Hintergrundhelligkeit genutzt.",
+		"edt_conf_color_backlightThreshold_title" : "Hintergrund - beleuchtung",
+		"edt_conf_color_backlightThreshold_expl" : "Eine Beleuchtung die dauerhaft aktiv ist. (Automatisch deaktiviert bei Effekten, Farben oder im Zustand \"Aus\")",
+		"edt_conf_color_backlightColored_title" : "Farbige Hintergrund - beleuchtung",
+		"edt_conf_color_backlightColored_expl" : "Die Hintergrundbeleuchtung kann mit oder ohne Farbanteile genutzt werden.",
 		"edt_conf_color_brightness_title" : "Maximale Helligkeit",
 		"edt_conf_color_brightness_expl" : "Zwischen 0.0 und 0.5 ist die Helligkeit linearisiert. Von 0.5 bis 1.0 wird cyan, magenta und gelb bis zu 2x heller und weiß bis zu 3x.",
 		"edt_conf_smooth_heading_title" : "Glättung",
@@ -615,9 +619,11 @@
 		"edt_eff_colorHour_title" : "Farbe Stunde",
 		"edt_eff_colorMinute_title" : "Farbe Minute",
 		"edt_eff_colorSecond_title" : "Farbe Sekunde",
-		"edt_eff_hourMargin_title" : "Abstand Stunde",
-		"edt_eff_minuteMargin_title" : "Abstand Minute",
-		"edt_eff_secondMargin_title" : "Abstand Sekunde",
+		"edt_eff_hourMargin_title" : "Länge Stunde",
+		"edt_eff_minuteMargin_title" : "Länge Minute",
+		"edt_eff_secondMargin_title" : "Länge Sekunde",
+		"edt_eff_margin_title" : "Abstand",
+		"edt_eff_colorMarker_title" : "Farbe Markierung",
 		"edt_append_ns" : "ns",
 		"edt_append_ms" : "ms",
 		"edt_append_s" : "s",
