--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -161,9 +161,12 @@
 		"conf_kodi_label_title" : "Kodi Watch",
 		"conf_kodi_intro" : "The Kodi Watcher enables you to enable and disable the screencapture depending on Kodi state. This is not limited to the same machine, you could observe also a Kodi on any other device at your network.",
 		"conf_logging_label_intro" : "Area to check log messages, depending on loglevel setting you see more or less information.",
-		"conf_logging_btn_pbupload" : "Upload log",
+		"conf_logging_btn_pbupload" : "Create report for support request",
 		"conf_logging_btn_autoscroll" : "Auto scrolling",
 		"conf_logging_nomessage" : "No log messages available.",
+		"conf_logging_uploading" : "Prepare data...",
+		"conf_logging_yourlink" : "Link to your report",
+		"conf_logging_uplfailed" : "Upload failed! Please check your internet connection!",
 		"conf_webconfig_label_intro" : "Webconfiguration settings. Edit wisely.",
 		"remote_losthint" : "Note: All changes are lost after a restart.",
 		"remote_color_label" : "Colors/Effects",
@@ -296,11 +299,11 @@
 		"wiz_cc_kodishould" : "Kodi should the following picture: $1",
 		"wiz_cc_lettvshow" : "Let your TV show the following picture: $1",
 		"wiz_cc_lettvshowm" : "Check this with the following pictures: $1",
-		"wiz_cc_adjustit" : "Adjust your \"$1\", until your are fine with it.",
+		"wiz_cc_adjustit" : "Adjust your \"$1\", until your are fine with it. Take notice: The more you adjust away from the default value the color spectrum will be limited (Also for all colors in between). Depending on TV/LED color spectrum the results will vary.",
 		"wiz_cc_adjustgamma" : "Gamma: Was du jetzt tun musst ist, jeden Gamma-Kanal so einstellen, dass der \"Grauverlauf\" auf den LEDs nicht grünlich/rötlich/bläulich aussieht. Beispiel: Sollte dein grau etwas rötlich sein bedeutet dies, dass du dein Gamma für Rot erhöhen musst um den Rot-Anteil zu verringern (Je mehr Gamma, desto weniger Farbe).",
-		"wiz_cc_chooseid" : "Select a name for this profile.",
+		"wiz_cc_chooseid" : "Define a name for this profile.",
 		"wiz_cc_btn_switchpic" : "Switch picture",
-		"wiz_cc_minBright" : "Additional you could define a minimum brightness to sort out \"bad colors\" on nearly dark areas or if you don't like the switch between color and off during watching. This is disabled during the state \"Off\" ,color and effect.",
+		"wiz_cc_backlight" : "Additional you could define a backlight to sort out \"bad colors\" on nearly dark areas or if you don't like the switch between color and off during watching. Additional you could define if there should be some color in it or just white. This is disabled during the state \"Off\" ,\"Color\" and \"Effect\".",
 		"wiz_cc_testintro" : "Time for a real test!",
 		"wiz_cc_testintrok" : "Push on a button below to start a test video.",
 		"wiz_cc_testintrowok" : "Checkout the following link to download test videos:",
@@ -422,9 +425,10 @@
 		"edt_conf_color_gammaGreen_expl" : "The gamma of green.",
 		"edt_conf_color_gammaBlue_title" : "gamma blue",
 		"edt_conf_color_gammaBlue_expl" : "The gamma of blue.",
-		"edt_conf_color_backlightThreshold_title" : "backlight threshold",
+		"edt_conf_color_backlightThreshold_title" : "Backlight threshold",
+		"edt_conf_color_backlightThreshold_expl" : "The minimum amount of brightness (backlight). Disabled during effects, colors and in status \"Off\"",
 		"edt_conf_color_backlightColored_title" : "Colored backlight",
-		"edt_conf_color_brightnessMin_expl" : "The minimum amount of brightness (backlight).",
+		"edt_conf_color_backlightColored_expl" : "Add some color to your backlight.",
 		"edt_conf_color_brightness_title" : "maximal brightness",
 		"edt_conf_color_brightness_expl" : "From 0.0 to 0.5 the brightness is linearised, from 0.5 to 1.0 cyan, magenta, yellow is up to 2x brighter and white 3x.",
 		"edt_conf_smooth_heading_title" : "Smoothing",
@@ -618,6 +622,8 @@
 		"edt_eff_hourMargin_title" : "Margin hour",
 		"edt_eff_minuteMargin_title" : "Margin minute",
 		"edt_eff_secondMargin_title" : "Margin second",
+		"edt_eff_margin_title" : "Margin",
+		"edt_eff_colorMarker_title" : "Color marker",
 		"edt_append_ns" : "ns",
 		"edt_append_ms" : "ms",
 		"edt_append_s" : "s",
