--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -18,6 +18,7 @@
 		"general_country_nl" : "Niederlande",
 		"general_speech_de" : "Deutsch",
 		"general_speech_en" : "Englisch",
+		"general_speech_es" : "Spanisch",
 		"general_access_default" : "Standard",
 		"general_access_advanced" : "Fortgeschritten",
 		"general_access_expert" : "Experte",
