--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -18,6 +18,7 @@
 		"general_country_nl" : "Netherlands",
 		"general_speech_de" : "German",
 		"general_speech_en" : "English",
+		"general_speech_es" : "Spanish",
 		"general_access_default" : "Default",
 		"general_access_advanced" : "Advanced",
 		"general_access_expert" : "Expert",
@@ -397,6 +398,7 @@
 		"edt_conf_color_heading_title" : "Color Calibration",
 		"edt_conf_color_channelAdjustment_header_itemtitle" : "Profile",
 		"edt_conf_color_channelAdjustment_header_title" : "Color channel adjustments",
+		"edt_conf_color_channelAdjustment_header_expl": "Adjustments for color, brightness, linearization and more.",
 		"edt_conf_color_imageToLedMappingType_title" : "Led area assignment",
 		"edt_conf_color_imageToLedMappingType_expl" : "Overwrites the led area assignment of your led layout if it's not \"multicolor\"",
 		"edt_conf_color_id_title" : "ID",
